# tulahack-2026

./: README.md  docker-compose.frontend.yaml  serdeshnow.jsonl
backend/: .env.example  Dockerfile.app  Dockerfile.whisper  docker-compose.yml
backend/docs/: openapi.yaml
backend/scripts/: start_whisper_server.sh
backend/src/tula_ml/: api.py  audio.py  auth.py  config.py  database.py  diarization.py  evaluation.py  json_utils.py  lmstudio.py  main.py  models.py  pii.py  pipeline.py  postgres_database.py  (+5 more)
evaluator/: README.md  main.py  pyproject.toml
evaluator/configs/: e2e.eval.yml
evaluator/datasets/examples/: e2e_dataset.jsonl
evaluator/datasets/synth/: pii_text_dataset_all.jsonl
evaluator/evals/: __init__.py  cli.py  config.py  reporting.py  transcript_artifact.py
evaluator/evals/clients/: __init__.py  http.py
evaluator/evals/datasets/: common.py  e2e.py
evaluator/evals/metrics/: segments.py  speakers.py  wer.py
evaluator/evals/runners/: __init__.py  e2e.py
evaluator/evals/services/: __init__.py  platform.py
evaluator/mock_service/: Dockerfile  __init__.py  app.py  fixtures.py
evaluator/tests/: test_mock_api.py  test_speaker_metrics.py  test_transcript_artifact.py
evaluator/tools/: __init__.py  build_tts_synth_dataset.py
evaluator/tts/: Dockerfile  main.py  requirements.txt
frontend/: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierrc.json  Dockerfile  README.md  components.json  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/docs/: project-context.md
frontend/src/: main.tsx
(+97 files in other folders)
